autorefactor code. get rid serial and firmata bundles